--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -5,12 +5,13 @@ spring:
     name: gateway
   cloud:
     nacos:
-      server-addr: localhost:8848
+      server-addr: 192.168.1.101:8848
       config:
         file-extension: yaml
         namespace: 60cf3839-8482-46f9-a4f1-cab67f76650e
       discovery:
         namespace: 60cf3839-8482-46f9-a4f1-cab67f76650e
+        ip: 192.168.1.101
     gateway:
       routes:
         - id: user-service
