--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -53,11 +53,22 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>app</finalName>
+        <finalName>order-service</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
             </plugin>
         </plugins>
     </build>
