--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>order-service</module>
         <module>feign_api</module>
         <module>gateway</module>
+        <module>rabbitmq-consumer</module>
+        <module>rabbitmq-publisher</module>
         <!--        <module>feign-api</module>-->
         <!--        <module>gateway</module>-->
     </modules>
