--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>gateway</module>
         <module>rabbitmq-consumer</module>
         <module>rabbitmq-publisher</module>
+        <module>elasticsearch</module>
         <!--        <module>feign-api</module>-->
         <!--        <module>gateway</module>-->
     </modules>
@@ -80,6 +81,15 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
         </dependency>
     </dependencies>
     <build>
